# FRAG

./: .flake8  .fragrc  .gitignore  README.md  conf.py  index.rst  pyproject.toml
.frag/: config.yaml
cli/: __init__.py  embed.py  frag_cli.py  init_command.py  store_init_command.py  test_settings_command.py  utils.py
cli/init_command/: __init__.py  embed_api_init.py  embed_db_init.py
custom_db_path/: chroma.sqlite3
db/: chroma.sqlite3
docs/: conf.py  index.rst  make.py
embeddings_old/: embedding_store.py
example_projects/all_openai_support/: .fragrc  prompts.md
example_projects/openai_nextjs_support/: .fragrc
examples/openai_nextjs_support/: .fragrc  prompts.yaml
frag/: __init__.py  frag.py
frag/bots/: __init__.py  interface_bot.py
frag/cli/: __init__.py  frag.py  init_command.py  utils.py
frag/completions/: __init__.py  base_bot.py  interface_bot.py  prompter.py  summarizer_bot.py
frag/embeddings/: Chunk.py  __init__.py  embed_api.py  embedding_model.py  embedding_store.py  embeddings.py  embeddings_metadata.py  embeddings_model.py  get_embed_api.py  hf_embed_api.py  source_chunk.py  source_chunker.py  store.py
frag/prompter/: base_api_client.py  base_bot.py  interface.py  interface_bot.py  prompter.py  summarizer.py
frag/settings/: .fragrc_default  .fragrc_default.yaml  __init__.py  bot_model_settings.py  bots_settings.py  chunker_settings.py  db_settings.py  embed_api_settings.py  embed_settings.py  llm_model_settings.py  (+1 more)
scripts/: build_docs.py  serve_docs.py
templates/: interface.message.md  interface.system.html  summarizer.system.html  summarizer.system.md  summarizer.user.html  summarizer.user.md
tests/: test_chunk.py  test_embedding_reader.py  test_embedding_store.py  test_embeddings_writer.py  test_frag.py  test_settings.py  test_source_chunker.py  utils.py
(+42 files in other folders)
