[tool.poetry]
name = "frag"
version = "0.1.0"
description = ""
authors = ["lumpenspace <lumpenspace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.24"
tiktoken = "^0.6.0"
pydantic = "^2.6.4"
pandas = "^2.2.1"
openai = "^1.14.3"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
flatten-dict = "^0.4.2"
sphinx = "^7.2.6"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docs = "scripts.build_docs:main"
serve = "scripts.serve_docs:main"
