[tool.poetry]
name = "frag"
version = "0.1.0"
description = ""
authors = ["lumpenspace <lumpenspace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beaupy = "^3.8.2"
chromadb = "^0.4.24"
click = "^8.1.7"
litellm = "^1.35.26"
marko = "^2.0.3"
openai = "^1.14.3"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sentence-transformers = "^2.6.1"
sphinx = "^7.2.6"
sphinxcontrib-mermaid = "^0.9.2"
tiktoken = "^0.6.0"
transformers = "^4.39.3"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docs = "scripts.build_docs:main"
serve = "scripts.serve_docs:main"
frag = "cli:main"


